@@ -1,5 +1,8 @@
 2004-12-12  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* scm/output-gnome.scm (placebox): Hackery to get bigcheese symbols
+	within canvas boundaries.
+
 	* mf/merge.pe.in: Set font names, version, license GPL.
 
 	* make/substitute.make: Add FONTFORGE.
